cmake_minimum_required(VERSION 3.16.3)

project(Track)

set(example_src_dir src/examples/)
add_subdirectory(${example_src_dir}/example001_mouse/)
add_subdirectory(${example_src_dir}/example002_mouse/)
add_subdirectory(${example_src_dir}/example003_mouse/)
add_subdirectory(${example_src_dir}/example004_mouse/)
add_subdirectory(${example_src_dir}/example005_mouse/)